remote/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remote-guacd
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: remote-guacd
  template:
    metadata:
      labels:
        app: remote-guacd
    spec:
      containers:
        - name: remote-guacd
          image: ghcr.io/pmh-only/guacd:1.6.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remote-guacamole
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: remote-guacamole
  template:
    metadata:
      labels:
        app: remote-guacamole
    spec:
      containers:
        - name: remote-guacamole
          image: ghcr.io/pmh-only/guacamole:1.6.0
