remote/service.yml
apiVersion: v1
kind: Service
metadata:
  name: remote-guacd
spec:
  selector:
    app: remote-guacd
  ports:
    - protocol: TCP
      port: 4822
      targetPort: 4822
---
apiVersion: v1
kind: Service
metadata:
  name: remote-guacamole
spec:
  selector:
    app: remote-guacamole
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
